--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/sms.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/sms.html.twig
@@ -7,8 +7,8 @@
 
 {% block main %}
 
-{% include 'TopxiaAdminBundle:EduCloud:Sms/without-enable.html.twig'  %}
-{#{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
-{% include 'TopxiaAdminBundle:EduCloud:Sms/overview.html.twig'  %}
-{% include 'TopxiaAdminBundle:EduCloud:Sms/setting.html.twig'  %}#}
+{#{% include 'TopxiaAdminBundle:EduCloud:Sms/without-enable.html.twig'  %}#}
+{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
+{#{% include 'TopxiaAdminBundle:EduCloud:Sms/overview.html.twig'  %}#}
+{% include 'TopxiaAdminBundle:EduCloud:Sms/setting.html.twig'  %}
 {% endblock %}
