--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Video/video.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Video/video.html.twig
@@ -191,10 +191,10 @@
 
   </style>
 
-    {% include 'TopxiaAdminBundle:EduCloud:Video/without-enable.html.twig'  %}
-    {#{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
-    {% include 'TopxiaAdminBundle:EduCloud:Video/overview.html.twig'  %}
-    {% include 'TopxiaAdminBundle:EduCloud:Video/setting.html.twig'  %}#}
+    {#{% include 'TopxiaAdminBundle:EduCloud:Video/without-enable.html.twig'  %}#}
+    {% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
+    {#{% include 'TopxiaAdminBundle:EduCloud:Video/overview.html.twig'  %}#}
+    {% include 'TopxiaAdminBundle:EduCloud:Video/setting.html.twig'  %}
 
 
  
