--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Video/video.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Video/video.html.twig
@@ -193,8 +193,8 @@
 
     {#{% include 'TopxiaAdminBundle:EduCloud:Video/without-enable.html.twig'  %}#}
     {% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
-    {#{% include 'TopxiaAdminBundle:EduCloud:Video/overview.html.twig'  %}#}
-    {% include 'TopxiaAdminBundle:EduCloud:Video/setting.html.twig'  %}
+    {% include 'TopxiaAdminBundle:EduCloud:Video/overview.html.twig'  %}
+    {#{% include 'TopxiaAdminBundle:EduCloud:Video/setting.html.twig'  %}#}
 
 
  
