--- a/src/WebBundle/Resources/views/EssayQuestion/do.html.twig
+++ b/src/WebBundle/Resources/views/EssayQuestion/do.html.twig
@@ -1,6 +1,6 @@
 <div class="testpaper-question testpaper-question-essay {% if setting('magic.testpaper_watermark') %}testpaper-watermark{% endif %}" data-watermark-url="{{ path('cloud_testpaper_watermark') }}" id="question{{ question.id }}">
 	<div class="testpaper-question-body">
-	  {% include 'WebBundle:Question/Part:question-stem.html.twig' %}
+	  {% include 'WebBundle:Question/Part:question-stem.html.twig' with {question:question, parentQuestion:parentQuestion|default(null)} %}
   </div>
 	{% if paperResult.status|default(null) in ['reviewing', 'finished'] %}
 
