--- a/src/WebBundle/Resources/views/FillQuestion/do.html.twig
+++ b/src/WebBundle/Resources/views/FillQuestion/do.html.twig
@@ -2,7 +2,7 @@
 
 <div class="testpaper-question testpaper-question-fill {% if setting('magic.testpaper_watermark') %}testpaper-watermark{% endif %}" data-watermark-url="{{ path('cloud_testpaper_watermark') }}" id="question{{ question.id }}">
 	<div class="testpaper-question-body">
-	  {% include 'WebBundle:Question/Part:question-stem.html.twig' %}
+	  {% include 'WebBundle:Question/Part:question-stem.html.twig' with {question:question, parentQuestion:parentQuestion|default(null)} %}
   </div>
 
 	{% if (paperResult.status|default(null) in ['reviewing', 'finished'] and setting('questions.testpaper_answers_show_mode','submitted') == 'submitted' ) or (setting('questions.testpaper_answers_show_mode','submitted') == 'reviewed'  and paperResult.status|default(null) == 'finished' ) %}
