--- a/src/WebBundle/Resources/views/Homework/Part/paper-card.html.twig
+++ b/src/WebBundle/Resources/views/Homework/Part/paper-card.html.twig
@@ -5,14 +5,14 @@
 			<button class="btn btn-default btn-sm pull-right" id="homework-next-do" data-url="" data-return-url="">{{'下次再做'|trans}}</button>
 		</div>
 		<div class="panel-body">
-			{% for item in items.items %}
-        <a href="javascript:;" data-anchor="#question{{ item.questionId }}" class="btn btn-default btn-index pull-left {% if item.question.testResult|default(null) %}active{% endif %}">{{ item.seq }}</a>
+			{% for question in questions %}
+        <a href="javascript:;" data-anchor="#question{{ question.id }}" class="btn btn-default btn-index pull-left {% if question.testResult|default(null) %}active{% endif %}">{{ question.seq }}</a>
       {% endfor %}
 		</div>
 		<div class="panel-footer">
-			{% if result.status|default(null) == 'reviewing' %}
+			{% if paperResult.status|default(null) == 'reviewing' %}
         <button class="btn btn-success btn-block" data-toggle="modal" data-target="#modal" data-url"" id="homework-check-show-btn" data-return-url="">{{'完成批改'|trans}}</button>
-      {% elseif result.status|default(null) == 'doing' %}
+      {% elseif paperResult.status|default(null) == 'doing' %}
       	<button id="paper-finish" class="btn btn-success btn-block" >{{'提交作业'|trans}}</button>
       {% endif %}
 
