--- a/src/WebBundle/Resources/views/Testpaper/testpaper-layout.html.twig
+++ b/src/WebBundle/Resources/views/Testpaper/testpaper-layout.html.twig
@@ -2,164 +2,154 @@
 
 {% block title %}{{ paper.name }} - {{ parent() }}{% endblock %}
 
-
-{% set script_controller = 'quiz-question/do-test' %}
-
-{% if setting('course.testpaperCopy_enabled') == '1' %}
-{% do load_script('quiz-question/do-test-prevent-copy') %}
-{% endif %}
-
 {% block content %}
-<div class="es-section testpaper-heading">
-  <div class="testpaper-titlebar clearfix">
-    <h1 class="testpaper-title">{{ paper.name }} <br>
-      <small class="text-sm">
-        {% if paperResult.status|default(null) in ['reviewing','finished'] %}
-          {{'答题人：'|trans}}{{ student.nickname }} 
-          {{'交卷时间：'|trans}}{{ paperResult.endTime|date('Y-n-d H:i') }} 
-          {{'用时：'|trans}}{{ paperResult.usedTime|duration }}
-        {% endif %}
-      </small>
-    </h1>
-    <div class="testpaper-status">
-      {% block testpaper_heading_status %}{% endblock %}
-    </div>
-  </div>
 
-  {% block testpaper_heading_content %}{% endblock %}
-
-  {% if (source|default(null) == 'classroom') %}
-    {% set canHandle = classroom_permit(targetId, 'Handle') %}
-  {% else %}
-    {% set canHandle = app.user.isTeacher() %}
-  {% endif %}
-  
-  {% if paperResult.status|default('doing') not in ['reviewing'] and showTestpaperNavbar|default('on') == 'on' %}
-    <div id="testpaper-navbar" class="testpaper-navbar" data-spy="affix" data-offset-top="200">
-      <ul class="nav nav-pills clearfix">
-        {% for type,count in paper.metas.counts if count > 0 %}
-          <li><a href="#testpaper-questions-{{ type }}">{{dict('questionType')[type]}}</a></li>
-        {% endfor %}
-      </ul>
-    </div>
-  {% endif %}
-</div>
-
-<div class="row">
-  <div class="col-md-9 prevent-copy">
-    <div class="testpaper-body" >
-      {% include 'WebBundle:Testpaper:do-test.html.twig' %}
-    </div>
-  </div>
-  <div class="col-md-3">
-    {% block testpaper_body_sidebar %}{% endblock %}
-  </div>
-</div>
-
-  {% block timeoutDialog %}
-
-    <div class="timeout-dialog-layout">
-      <div id="timeout-dialog" class="modal in" aria-hidden="false" style="display: none;">
-        <div class="modal-dialog modal-dialog-small">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">{{'考试结束'|trans}}</h4>
-            </div>
-            <div class="modal-body">
-              <div class="well well-lg">
-                <div class="empty">{{'考试已结束，请点击下面的按钮查看结果'|trans}}~</div>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <a href="{{ path('course_manage_test_results', {id:paperResult.id|default(0)} ) }}" id="show_testpaper_result" class="btn btn-info">{{'查看结果'|trans}}</a>
-            </div>
-          </div>
+  {% block paper_header %}
+    <div class="es-section testpaper-heading">
+      <div class="testpaper-titlebar clearfix">
+        <h1 class="testpaper-title">
+          {{ paper.name }} <br>
+          <small class="text-sm">
+            {% if result.status|default(null) in ['reviewing','finished'] %}
+              {{'答题人：'|trans}}{{ student.nickname }} 
+              {{'交卷时间：'|trans}}{{ result.endTime|date('Y-n-d H:i') }} 
+              {{'用时：'|trans}}{{ result.usedTime|duration }}
+            {% endif %}
+          </small>
+        </h1>
+        <div class="testpaper-status">
+          {% if result.status|default(null) == 'doing' %}
+            <div class="label label-primary">{{'答题中'|trans}}</div>
+          {% elseif result.status|default(null) == 'reviewing' %}
+            <div class="label label-info">{{'批阅中'|trans}}</div>
+          {% else %}
+            <div class="label label-success">{{'批阅完成'|trans}}</div>
+          {% endif %}
         </div>
       </div>
-    </div>
 
+      {% block paper_description %}{% endblock %}
+      {% block paper_result_bar %}{% endblock %}
+      {% block paper_warning %}{% endblock %}
+      {% block paper_question_type_bar %}{% endblock %}
+    </div>
   {% endblock %}
 
-  {% block testpaperCheckedDialog %}
-
-    <div class="testpaper-dialog-layout">
-      <div id="testpaper-checked-dialog" class="modal in" aria-hidden="false" style="display: none;">
-        <div class="modal-dialog modal-dialog-small">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h4 class="modal-title">{{'完成批阅'|trans}}</h4>
-            </div>
-            <div class="modal-body">
-
-              <div class="form-group">
-                <div class="controls">
-                  <textarea class="form-control" rows='4' id="testpaper-teacherSay-input" placeholder="{{'请输入评语'|trans}}"></textarea>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="controls">
-                  <select class="form-control" id="testpaper-teacherSay-select">
-                    <option value="">---{{'常用评语'|trans}}---</option>
-                    <option value="1">{{'继续努力，继续进步！'|trans}}</option>
-                    <option value="2">{{'不错，有进步，再努力些就会更棒！'|trans}}</option>
-                    <option value="3">{{'你真棒！我为你骄傲！'|trans}}</option>
-                    <option value="4">{{'有点松懈了吧？继续加油吧！'|trans}}</option>
-                    <option value="5">{{'用心、专注、坚持，你能做的更好的！'|trans}}</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-md-4 controls">
-                  {% if paperResult|default(null) %}
-                    <input type="hidden" value="{{ paperResult.objectiveScore }}" name="objectiveScore" />
-                    {{'试卷得分'|trans}}:<span id="totalScore">{{ paperResult.objectiveScore }}</span>
-                  {% endif %}
-                </div>
-                <div class="col-md-8 controls radios">
-                  {{ radios('passedStatus', dict('passedStatus'), 'passed' ) }}
-                </div>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <a href="javascript:;" class="btn btn-default" data-dismiss="modal">{{'取消'|trans}}</a>
-              <button type="submit" class="btn btn-info" data-toggle="form-submit" data-target="#teacherCheckForm" id="testpaper-teacherSay-btn" data-post-url="{{ path('course_manage_test_teacher_check', { id: paperResult.id|default(0) }) }}"
-              {% if source|default('course') == 'classroom' %}
-                data-goto="{{ path('classroom_manage_testpaper',{id:targetId,status:'reviewing'}) }}"
-              {% else %}
-                data-goto="{{ path('course_manage_list_teacher_test_reviewing') }}"
-              {% endif %}
-
-              >{{'完成批阅'|trans}}</button>
-            </div>
-          </div>
+  {% block paper_content %}
+    <div class="row">
+      <div class="col-md-9 prevent-copy">
+        <div class="testpaper-body" >
+          {% block paper_body %}
+            {% include 'WebBundle:Testpaper:do-test.html.twig' %}
+          {% endblock %}
         </div>
       </div>
-    </div>
-
-  {% endblock %}
-
-  {% block testpaperFinishedDialog %}
-
-    <div class="testpaper-finished-dialog-layout">
-      <div id="testpaper-finished-dialog" class="modal in" aria-hidden="false" style="display: none;">
-        <div class="modal-dialog modal-dialog-small">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4 class="modal-title">{{'确认交卷'|trans}}</h4>
-            </div>
-            <div class="modal-body">
-              <h4 class="text-primary">{{'您真的要交卷吗？'|trans}}</h4>
-            </div>
-            <div class="modal-footer">
-              <a href="javascript:;" class="btn btn-link" data-dismiss="modal">{{'取消'|trans}}</a>
-              <button class="btn btn-primary" id="testpaper-finish-btn" data-saving-text="{{'正在交卷, 请稍等'|trans}}...">{{'确认交卷'|trans}}</button>
-            </div>
-          </div>
-        </div>
+      <div class="col-md-3">
+        {% block paper_sidebar %}{% endblock %}
       </div>
     </div>
-
   {% endblock %}
 
 {% endblock %}
+
+{% block timeoutDialog %}
+  <div class="timeout-dialog-layout">
+    <div id="timeout-dialog" class="modal in" aria-hidden="false" style="display: none;">
+      <div class="modal-dialog modal-dialog-small">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">{{'考试结束'|trans}}</h4>
+          </div>
+          <div class="modal-body">
+            <div class="well well-lg">
+              <div class="empty">{{'考试已结束，请点击下面的按钮查看结果'|trans}}~</div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <a href="{{ path('course_manage_test_results', {id:paperResult.id|default(0)} ) }}" id="show_testpaper_result" class="btn btn-info">{{'查看结果'|trans}}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+
+{% block testpaperCheckedDialog %}
+  <div class="testpaper-dialog-layout">
+    <div id="testpaper-checked-dialog" class="modal in" aria-hidden="false" style="display: none;">
+      <div class="modal-dialog modal-dialog-small">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h4 class="modal-title">{{'完成批阅'|trans}}</h4>
+          </div>
+          <div class="modal-body">
+
+            <div class="form-group">
+              <div class="controls">
+                <textarea class="form-control" rows='4' id="testpaper-teacherSay-input" placeholder="{{'请输入评语'|trans}}"></textarea>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="controls">
+                <select class="form-control" id="testpaper-teacherSay-select">
+                  <option value="">---{{'常用评语'|trans}}---</option>
+                  <option value="1">{{'继续努力，继续进步！'|trans}}</option>
+                  <option value="2">{{'不错，有进步，再努力些就会更棒！'|trans}}</option>
+                  <option value="3">{{'你真棒！我为你骄傲！'|trans}}</option>
+                  <option value="4">{{'有点松懈了吧？继续加油吧！'|trans}}</option>
+                  <option value="5">{{'用心、专注、坚持，你能做的更好的！'|trans}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-4 controls">
+                {% if paperResult|default(null) %}
+                  <input type="hidden" value="{{ paperResult.objectiveScore }}" name="objectiveScore" />
+                  {{'试卷得分'|trans}}:<span id="totalScore">{{ paperResult.objectiveScore }}</span>
+                {% endif %}
+              </div>
+              <div class="col-md-8 controls radios">
+                {{ radios('passedStatus', dict('passedStatus'), 'passed' ) }}
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <a href="javascript:;" class="btn btn-default" data-dismiss="modal">{{'取消'|trans}}</a>
+            <button type="submit" class="btn btn-info" data-toggle="form-submit" data-target="#teacherCheckForm" id="testpaper-teacherSay-btn" data-post-url="{{ path('course_manage_test_teacher_check', { id: paperResult.id|default(0) }) }}"
+            {% if source|default('course') == 'classroom' %}
+              data-goto="{{ path('classroom_manage_testpaper',{id:targetId,status:'reviewing'}) }}"
+            {% else %}
+              data-goto="{{ path('course_manage_list_teacher_test_reviewing') }}"
+            {% endif %}
+
+            >{{'完成批阅'|trans}}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+
+
+{% block testpaperFinishedDialog %}
+  <div class="testpaper-finished-dialog-layout">
+    <div id="testpaper-finished-dialog" class="modal in" aria-hidden="false" style="display: none;">
+      <div class="modal-dialog modal-dialog-small">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">{{'确认交卷'|trans}}</h4>
+          </div>
+          <div class="modal-body">
+            <h4 class="text-primary">{{'您真的要交卷吗？'|trans}}</h4>
+          </div>
+          <div class="modal-footer">
+            <a href="javascript:;" class="btn btn-link" data-dismiss="modal">{{'取消'|trans}}</a>
+            <button class="btn btn-primary" id="testpaper-finish-btn" data-saving-text="{{'正在交卷, 请稍等'|trans}}...">{{'确认交卷'|trans}}</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
+
