--- a/src/Topxia/WebBundle/Resources/views/Course/header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/header.html.twig
@@ -123,3 +123,6 @@
     </a>
   </div>
 {% endif %}
+{% if course.status == 'closed' %}
+<div class="alert alert-warning">课程已关闭，在有效期内的学员仍可正常学习，若不希望学员继续学习，需在【学员管理】中移除学员。</div>
+{% endif %}
