--- a/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
@@ -4,8 +4,9 @@
 
 {% set menu = 'admin_setting_user_center' %}
 
-{% block main %}
 
+
+{% block main %}
   {% if setting.mode !='default' %}
     <div class="page-header clearfix"><a href="{{ path('admin_setting_admin_sync') }}" class="pull-right btn btn-link">{{'管理员帐号同步'|trans}}</a>
     </div>
@@ -64,10 +65,10 @@
   </div>
 
   <div class="alert alert-info">
-    <p>1.若通讯失败，注册和登录将提示<strong>输入不合法</strong>或通讯失败需管理员配置。</p>
-    <p>2.通讯成功，Discuz或phpwind<strong>所有注册用户</strong>，用户的用户名（需满足ES注册规则，否则无法同步）、密码、邮箱信息，无论通讯前还是通讯后注册都可以登录并同步到网站。</p>
-    <p>3.通讯成功，只有<strong>通讯之后</strong>在ES注册的新用户，<strong>才能</strong>登录并同步到Discuz或phpwind，<strong>通讯之前</strong>的注册用户，<strong>不能</strong>登录和同步。</p>
-    <p>4.由于<strong>密码加密机制</strong>不同，Discuz或phpwind的注册用户，无法批量导入到网站；网站的注册用户，也无法批量导入到Discuz或phpwind。</p>
+    <p>1.若通讯失败，注册和登录将提示<strong class="user-center-copys-darken">输入不合法</strong>或通讯失败需管理员配置。</p>
+    <p>2.通讯成功，Discuz或phpwind<strong class="user-center-copys-darken">所有注册用户</strong>，用户的用户名（需满足ES注册规则，否则无法同步）、密码、邮箱信息，无论通讯前还是通讯后注册都可以登录并同步到网站。</p>
+    <p>3.通讯成功，只有<strong class="user-center-copys-darken">通讯之后</strong>在ES注册的新用户，<strong class="user-center-copys-darken">才能</strong>登录并同步到Discuz或phpwind，<strong class="user-center-copys-darken">通讯之前</strong>的注册用户，<strong class="user-center-copys-darken">不能</strong>登录和同步。</p>
+    <p>4.由于<strong class="user-center-copys-darken">密码加密机制</strong>不同，Discuz或phpwind的注册用户，无法批量导入到网站；网站的注册用户，也无法批量导入到Discuz或phpwind。</p>
   </div>
 
 
