重构路由和url

--- a/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/index.html.twig
@@ -45,7 +45,7 @@
         </div>
       {% else %}
         <div role="tabpanel" class="tab-pane active pane-question">
-          {{ render(path('subtitle_manage',{courseId:course.id,lessonId:lesson.id})) }}
+          {{ render(path('media_subtitle_manage',{mediaId:media.id})) }}
         </div>
       {% endif %}
       </div>
