--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/lesson-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/lesson-modal.html.twig
@@ -141,8 +141,8 @@
       <div class="col-md-2 caption-uploader js-select-file" id="uploader" style="width: 130px" 
       data-media-id="{{ 69 }}"
       data-media-global-id="{{ 'c77de10a7f5a417786f8170e130dcab0' }}"
-      data-subtitle-create-url="{{ url('subtitle_create', {courseId: course.id}) }}"
-      data-subtitle-list-url="{{ url('subtitle_media_subtitles', {courseId: course.id, mediaId: 69}) }}"
+      data-subtitle-create-url="{{ url('media_subtitle_create', {mediaId: 1}) }}"
+      data-subtitle-list-url="{{ url('media_subtitles', {courseId: course.id, mediaId: 69}) }}"
       data-init-url="{{ url('uploader_init', {token:token}) }}"
       data-finish-url="{{ url('uploader_finished', {token:token}) }}"
       >
