--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Widget/thumbnail.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Widget/thumbnail.html.twig
@@ -41,7 +41,7 @@
       {% endif %}
 
       <li>
-        <a href="javascript:;" class="js-download-btn" data-toggle="tooltip" data-placement="bottom" >
+        <a href="{{ path('media_subtitle_manage', {mediaId:uploadFile.id}) }}" data-toggle="tooltip" data-placement="bottom">
           <i class="glyphicon glyphicon-pencil prm"></i>{{'字幕管理'|trans}}
         </a>
       </li>
