--- a/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/manage.html.twig
@@ -1,28 +1,50 @@
 {% extends 'TopxiaWebBundle:MediaManage:layout.html.twig' %} {% block media_edit %}
-  <div class="manage-edit-body">
-    <ul class="nav nav-tabs nav-tabs-edit" role="tablist">
-      <li role="presentation" class="active"><a href="#practice" aria-controls="practice" role="tab" data-toggle="tab">字幕</a></li>
-      <li class="static" role="presentation">
-        <a>
-          <!-- border show-introhelp-->
-          <span class=" show-introhelp">
-            <i class="es-icon es-icon-xinxi introhelp-icon-help color-warning" id="step-1" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="为保险起见，所有对视频的编辑操作都将实时保存。"></i>
-            <div class="popover bottom" >
-              <div class="arrow"></div>
-              <div class="popover-content clearfix">
-                <p>为保险起见，所有对视频的编辑操作都将实时保存。</p>
-                <span class="close-introhelp js-close-introhelp">知道了</span>
-              </div>
+<div class="manage-edit-body">
+  <ul class="nav nav-tabs nav-tabs-edit" role="tablist">
+    <li role="presentation" class="active">
+      <a href="#practice" aria-controls="practice" role="tab" data-toggle="tab">字幕</a>
+    </li>
+    <li class="static" role="presentation">
+      <a>
+        <!-- border show-introhelp-->
+        <span class=" show-introhelp">
+          <i class="es-icon es-icon-xinxi introhelp-icon-help color-warning" id="step-1" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="为保险起见，所有对视频的编辑操作都将实时保存。"></i>
+          <div class="popover bottom">
+            <div class="arrow"></div>
+            <div class="popover-content clearfix">
+              <p>为保险起见，所有对视频的编辑操作都将实时保存。</p>
+              <span class="close-introhelp js-close-introhelp">
+                知道了
+              </span>
             </div>
-          </span>
-        </a>
-      </li>
-    </ul>
-    <a href="" class="btn btn-info btn-preview" target="_blank">{{'预览'|trans}}</a>
-    <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active pane-question">
-        {# {{ render(path('media_subtitle_manage',{mediaId:media.id})) }} #}
+          </div>
+        </span>
+      </a>
+    </li>
+  </ul>
+  <a href="" class="btn btn-info btn-preview" target="_blank">
+    {{'预览'|trans}}
+  </a>
+<div class="tab-content">
+  <div role="tabpanel" class="tab-pane active pane-question">
+    <div>
+      <div class="text-track-title">
+        <div class="row">
+          {% set token = uploader_token('subtitle', media.id, 'private') %}
+          <div class="col-md-2 caption-uploader js-select-file" id="uploader" style="width: 130px" data-media-id="{{ media.id }}" data-media-global-id="{{ media.globalId }}" data-subtitle-create-url="{{ url('media_subtitle_create', {mediaId: media.id}) }}" data-subtitle-list-url="{{ url('media_subtitle_list', {mediaId: media.id}) }}" data-init-url="{{ url('uploader_init', {token:token}) }}" data-finish-url="{{ url('uploader_finished', {token:token}) }}" >
+          </div>
+          <div class="col-md-9 caption-notify" style="width: 250px; padding-left: 0">
+            目前仅支持srt字幕，最多上传4个字幕
+          </div>
+        </div>
+      </div>
+      <div class="text-track-list mrm mts ptm">
+        <div class="mrm" id="track-select"></div>
+        <div class="text-track-overview mrm"></div>
       </div>
     </div>
+    {% do load_script('media/subtitle/manage') %}
   </div>
+</div>
+</div>
 {% endblock %}
