--- a/src/Topxia/WebBundle/Resources/views/MediaManage/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/layout.html.twig
@@ -1,18 +1,20 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
 {% block title %}{{'弹题管理'|trans}}{% endblock %}
 
-{% set script_controller = 'marker/index' %}
+{% set script_controller = 'media/index' %}
 {% set bodyClass="marker-manage" %}
-{% set condition="subtitle" %}
 
 {% block body %}
-  <div class="marker-manage-content {% if condition != 'subtitle' %}question {% endif %} js-marker-manage-content" id="lesson-dashboard"
-    data-media-player-url="{{ path('media_play',{mediaId:media.id}) }}"
+  <div class="marker-manage-content js-marker-manage-content" id="lesson-dashboard"
+    data-media-player-url="{{ path('media_play',{mediaId:media.id}) }}" >
+
     {% include 'TopxiaWebBundle:MediaManage:player.html.twig' %}
     {% block media_edit %}
 
     {% endblock %}
-    {% include 'TopxiaWebBundle:Marker:coord.html.twig' %}
+
+    {% include 'TopxiaWebBundle:MediaManage:coord.html.twig' with { mediaLength:media.length } %}
+
   </div>
   <div class="modal"></div>
   <div class="introhelp-overlay js-introhelp-overlay hidden"></div>
