--- a/src/Topxia/WebBundle/Resources/views/MediaManage/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/layout.html.twig
@@ -1,5 +1,6 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
-{% block title %}{{'弹题管理'|trans}}{% endblock %}
+{% block title %}
+{% endblock %}
 
 {% set script_controller = 'media/index' %}
 {% set bodyClass="marker-manage" %}
