--- a/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/manage.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/manage.html.twig
@@ -1,4 +1,10 @@
-{% extends 'TopxiaWebBundle:MediaManage:layout.html.twig' %} {% block media_edit %}
+{% extends 'TopxiaWebBundle:MediaManage:layout.html.twig' %} 
+
+{% block title %}
+  {{'字幕管理'|trans}}
+{% endblock %}
+
+{% block media_edit %}
 <div class="manage-edit-body">
   <ul class="nav nav-tabs nav-tabs-edit" role="tablist">
     <li role="presentation" class="active">
