--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Widget/thumbnail.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Widget/thumbnail.html.twig
@@ -40,11 +40,13 @@
         </li>
       {% endif %}
 
-      <li>
-        <a href="{{ path('media_subtitle_manage', {mediaId:uploadFile.id}) }}" data-toggle="tooltip" data-placement="bottom">
-          <i class="glyphicon glyphicon-pencil prm"></i>{{'字幕管理'|trans}}
-        </a>
-      </li>
+      {% if uploadFile.storage == "cloud" and uploadFile.type == 'video' %}
+        <li>
+          <a href="{{ path('media_subtitle_manage', {mediaId:uploadFile.id}) }}" data-toggle="tooltip" data-placement="bottom">
+            <i class="glyphicon glyphicon-cog prm"></i>{{'字幕管理'|trans}}
+          </a>
+        </li>
+      {% endif %}
 
       <li>
         <a href="javascript:;"  data-url="{{ path('material_download', {fileId:uploadFile.id}) }}" class="js-download-btn" data-toggle="tooltip" data-placement="bottom" >
