--- a/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/dialog.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/dialog.html.twig
@@ -1,14 +1,16 @@
-<div class="js-subtitle-dialog">
-  <ul class="list-unstyled plm js-subtitle-list">
+<div class="js-subtitle-dialog" data-media-id={{media.id}}>
+  <ul class="list-unstyled plm js-media-subtitle-list">
     {% for subtitle in subtitles %}
       <li class="pvs">
         <span class="subtitle-name prl">{{ subtitle.name }}</span>
-        <a href="javascript:;" class="btn-link pll color-primary js-subtitle-delete">删除</a>
+        <a href="javascript:;" class="btn-link pll color-primary js-subtitle-delete" 
+        data-subtitle-delete-url="{{path('media_subtitle_delete',{mediaId:media.id,id:subtitle.id})}}"
+        >删除</a>
       </li>
     {% endfor %}
   </ul>
   {% set token = uploader_token('subtitle', media.id, 'private') %}
-  <div class="col-md-2 caption-uploader js-select-file" id="subtitle-uploader" style="width: 130px" 
+  <div class="col-md-2  caption-uploader js-select-file" id="subtitle-uploader" style="width: 130px;{% if subtitles|length > 3 %} display:none;{% endif %}" 
   data-media-id="{{ media.id }}"
   data-media-global-id="{{ 'media.globalId' }}"
   data-subtitle-create-url="{{ url('media_subtitle_create', {mediaId: media.id}) }}"
