--- a/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/dialog.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/dialog.html.twig
@@ -10,7 +10,7 @@
   {% set token = uploader_token('subtitle', media.id, 'private') %}
   <div class="col-md-2 caption-uploader js-select-file" id="subtitle-uploader" style="width: 130px" 
   data-media-id="{{ media.id }}"
-  data-media-global-id="{{ 'media.globalId' }}"
+  data-media-global-id="{{ media.globalId }}"
   data-subtitle-create-url="{{ url('media_subtitle_create', {mediaId: media.id}) }}"
   data-init-url="{{ url('uploader_init', {token:token}) }}"
   data-finish-url="{{ url('uploader_finished', {token:token}) }}"
