云视频tab权限配置，js还没有拆分开

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Search/search.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Search/search.html.twig
@@ -6,9 +6,9 @@
 {% block main %}
 
 
-{% include 'TopxiaAdminBundle:EduCloud:Search/without-enable.html.twig'  %}
-{#{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}#}
-{#{% include 'TopxiaAdminBundle:EduCloud:Search/overview.html.twig'  %}#}
+{#{% include 'TopxiaAdminBundle:EduCloud:Search/without-enable.html.twig'  %}#}
+{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
+{% include 'TopxiaAdminBundle:EduCloud:Search/overview.html.twig'  %}
 {#{% include 'TopxiaAdminBundle:EduCloud:Search/setting.html.twig'  %}#}
 
 
