--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Video/video.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Video/video.html.twig
@@ -2,6 +2,7 @@
 
 {% set menu = 'admin_setting_cloud_video' %}
 {% set script_controller = 'setting/cloud' %}
+{#{% block tabs %}{% endblock %}#}
 
 {% block main %}
 
@@ -192,8 +193,8 @@
   </style>
 
     {#{% include 'TopxiaAdminBundle:EduCloud:Video/without-enable.html.twig'  %}#}
-    {% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
-    {% include 'TopxiaAdminBundle:EduCloud:Video/overview.html.twig'  %}
+    {#{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}#}
+    {#{% include 'TopxiaAdminBundle:EduCloud:Video/overview.html.twig'  %}
     {#{% include 'TopxiaAdminBundle:EduCloud:Video/setting.html.twig'  %}#}
 
 
