--- a/web/assets/v2/css/main-orange-light.css
+++ b/web/assets/v2/css/main-orange-light.css
@@ -15346,6 +15346,18 @@ textarea {
   margin-bottom: 20px;
   border-top: 1px solid #dddddd;
 }
+.media-preview .media-preview-content .title {
+  padding-top: 35px;
+  text-align: center;
+  font-size: 30px;
+}
+.media-preview .media-preview-content .media-preview-player {
+  position: absolute;
+  top: 120px;
+  bottom: 60px;
+  left: 120px;
+  right: 120px;
+}
 html {
   height: 100%;
 }
