云直播权限配置,路由名字不合适

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Live/live.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Live/live.html.twig
@@ -7,8 +7,8 @@
 {#{% include 'TopxiaAdminBundle:EduCloud:Live/without-enable.html.twig'  %}#}
 
 {% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}
-{#{% include 'TopxiaAdminBundle:EduCloud:part/side-bar.html.twig'  %}#}
-{% include 'TopxiaAdminBundle:EduCloud:Live/setting.html.twig'  %}
+{% include 'TopxiaAdminBundle:EduCloud:Live/overview.html.twig'  %}
+{#{% include 'TopxiaAdminBundle:EduCloud:Live/setting.html.twig'  %}#}
 
 
 {% endblock %}
