--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Live/overview.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Live/overview.html.twig
@@ -1,3 +1,8 @@
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+
+{% set menu = 'admin_setting_cloud_edulive' %}
+{% set script_controller = 'setting/cloud-live' %}
+{% block main %}
 <!-- 概览 -->
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -29,3 +34,4 @@
     <div id="liveTopChart" style="width: 100%;height:400px;"></div>
   </div>
 </div>
+{% endblock %}
