--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Live/setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Live/setting.html.twig
@@ -1,3 +1,7 @@
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+
+{% set menu = 'admin_cloud_setting_edulive' %}
+{% block main %}
 <!-- 设置 -->
 <div class="page-heading">
   云直播开关
@@ -18,3 +22,4 @@
     </div>
   </div>
 </form>
+{% endblock %}
