--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/overview.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/overview.html.twig
@@ -1,3 +1,8 @@
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+
+{% set menu = 'admin_edu_cloud_sms_setting' %} 
+{% set script_controller = 'educloud/sms-setting' %}
+{% block main %}
 <div class="panel panel-default">
   <div class="panel-heading">
     基本信息 
@@ -31,3 +36,4 @@
     <div id="smsSendChart" style="width: 100%;height:400px;"></div>
   </div>
 </div>
+{% endblock %}
