--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/setting.html.twig
@@ -1,5 +1,8 @@
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+{% set menu = 'admin_edu_cloud_setting_sms' %} 
 
-
+{% set script_controller = 'educloud/sms-setting' %}
+{% block main %}
   <!-- 设置 -->
 <div class="page-heading">
   云短信开关
@@ -226,3 +229,4 @@
       </tbody>
     </table>
   </div>
+  {% endblock %}
