--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Search/overview.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Search/overview.html.twig
@@ -1,3 +1,9 @@
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+
+{% set menu = 'admin_edu_cloud_search' %}
+{% set script_controller = 'setting/search' %}
+
+{% block main %}
 <div class="panel panel-default">
   <div class="panel-heading">
     基本信息 
@@ -128,3 +134,4 @@
     </div>
   </div>
 </div>
+{% endblock %}
