--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Search/setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Search/setting.html.twig
@@ -1,3 +1,9 @@
+{% extends 'TopxiaAdminBundle::layout.html.twig' %}
+
+{% set menu = 'admin_edu_cloud_setting_search' %}
+{% set script_controller = 'setting/search' %}
+
+{% block main %}
 <!-- 设置 -->
 <div class="page-heading">
   云搜索开关
@@ -31,3 +37,4 @@
     </div>
   </div>
 </form>
+{% endblock %}
