去掉tags字段，增加tag_owner表

--- a/src/Topxia/WebBundle/Resources/views/Course/info.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/info.html.twig
@@ -21,7 +21,7 @@
         {% if tags %}
           <p><strong>{{'标签：'|trans}}</strong>
             {% for tag in tags %}
-              <a href="{{ path('tag_show', {name:tag.name}) }}">{{ tag.name }}</a>
+              <a href="{{ path('course_explore') }}">{{ tag.name }}</a>
             {% endfor %}
           </p>
         {% endif %}
