--- a/src/WebBundle/Resources/views/AudioActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/AudioActivity/show.html.twig
@@ -5,13 +5,10 @@
 
 {% block content %}
   <div class="dashboard-body">
-    <div class="audio-content" id="audio-content" data-role="audio-content"
-         data-course-id="{{ activity.courseId }}"
-         data-task-id="{{ activity.taskId }}"
-         data-media="{{ activity.ext|json_encode }}"
-         data-user-id="{{ app.user.id }}"
-         data-balloon-player="1"
-    >
+    <div class="audio-content" id="audio-content" data-role="audio-content" >
+      <iframe  src="{{ path('course_task_player', {courseId: courseId, taskId: taskId})}}"
+          name='viewerIframe' id='viewerIframe' width='100%' allowfullscreen webkitallowfullscreen height='100%'
+          style='border:0px'></iframe>
     </div>
   </div>
 {% endblock %}
