--- a/src/WebBundle/Resources/views/VideoActivity/show.html.twig
+++ b/src/WebBundle/Resources/views/VideoActivity/show.html.twig
@@ -5,19 +5,12 @@
 
 {% block content %}
   <div class="dashboard-body">
-    <div class="lesson-content" id="video-content" data-role="lesson-content"
-         data-course-id="{{ activity.courseId }}"
-         data-task-id="{{ activity.taskId }}"
-         data-media="{{ activity.ext|json_encode }}"
-        {% if setting('storage.video_watermark') > 0 and setting('storage.video_watermark_image') %}
-          data-watermark="{{ filepath(setting('storage.video_watermark_image'), null, true) }}"
-        {% endif %}
-        {% if setting('storage.video_fingerprint') and app.user %}
-          data-fingerprint="{{ finger_print() }}"
-        {% endif %}
-         data-user-id="{{ app.user.id }}"
-         data-balloon-player="1"
-    >
+    <div class="lesson-content" id="video-content" data-role="lesson-content">
+      {#  如果用户上次观看过视频，需要请求上次的视频时长 作为参数 starttime= xxx #}
+      <iframe
+          src="{{ path('course_task_player', {courseId: courseId, taskId: taskId})}}"
+          name='viewerIframe' id='viewerIframe' width='100%' allowfullscreen webkitallowfullscreen height='100%'
+          style='border:0px'></iframe>
       <div class="watermarkEmbedded"></div>
     </div>
   </div>
