--- a/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/dialog.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/MediaManage/Subtitle/dialog.html.twig
@@ -3,6 +3,7 @@
     {% for subtitle in subtitles %}
       <li class="pvs">
         <span class="subtitle-name prl">{{ subtitle.name }}</span>
+        <span class="subtitle-transcode-status {{ subtitle.convertStatus }}">{{ subtitle.convertStatus }}</span>
         <a href="javascript:;" class="btn-link pll color-primary js-subtitle-delete" 
         data-subtitle-delete-url="{{path('media_subtitle_delete',{mediaId:media.id,id:subtitle.id})}}"
         >删除</a>
