云短信menu修改

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/overview.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Sms/overview.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_edu_cloud_search' %} 
+{% set menu = 'admin_edu_cloud_sms_setting' %} 
 {% set script_controller = 'educloud/sms-setting' %}
 {% block main %}
 <div class="panel panel-default">
