添加教育云锁定显示

--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/Overview/normal-use.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/Overview/normal-use.html.twig
@@ -1,4 +1,4 @@
-{% if locked|default(0) == 0 %}
+{% if overview.locked|default(false) == true %}
   <div class="alert alert-warning" role="alert">{{'您的教育云服务已被锁定，请联系客服人员：'|trans}}0571-86819929。</div>
 {% endif %}
   <div class="row">
