--- a/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/user-center.html.twig
@@ -20,7 +20,10 @@
       <label >{{'用户中心'|trans}}</label>
     </div>
     <div class="controls col-md-8 radios mode-radios">
-      {{ radios('mode', {'default':'无'|trans, 'discuz':'Discuz (Ucenter)', 'phpwind':'Phpwind'}, setting.mode) }}
+      {{ radios('mode', {'default':'无'|trans, 'discuz':'Discuz (Ucenter)'}, setting.mode) }}
+      {% if setting('magic.uc_phpwind','0') %}
+      <label><input type="radio" name="mode" value="phpwind"> Phpwind</label>
+      {% endif %}
       <div class="help-block">{{'支持Phpwind9以上版本，Discuz X2.5/X3.0/X3.1的用户中心'|trans}}</div>
     </div>
   </div>
@@ -121,7 +124,7 @@
     </div>
   </div>
   
-  {% if setting('magic.uc_phpwind','0') %}  
+  {% if setting('magic.uc_phpwind','0') %}
   <div class="row form-group with-phpwind" style="display:none;">
     <div class="col-md-3 control-label"><label>{{'WindId配置'|trans}}</label></div>
     <div class="controls col-md-8">
@@ -152,9 +155,9 @@
 
   <div class="alert alert-info">
     <p>1.若通讯失败，注册和登录将提示<strong class="user-center-copys-darken">输入不合法</strong>或通讯失败需管理员配置。</p>
-    <p>2.通讯成功，Discuz或Phpwind<strong class="user-center-copys-darken">所有注册用户</strong>，用户的用户名（需满足ES注册规则，否则无法同步）、密码、邮箱信息，无论通讯前还是通讯后注册都可以登录并同步到网站。</p>
-    <p>3.通讯成功，只有<strong class="user-center-copys-darken">通讯之后</strong>在ES注册的新用户，<strong class="user-center-copys-darken">才能</strong>登录并同步到Discuz，<strong class="user-center-copys-darken">通讯之前</strong>的注册用户，<strong class="user-center-copys-darken">不能</strong>登录和同步。</p>
-    <p>4.由于<strong class="user-center-copys-darken">密码加密机制</strong>不同，Discuz或Phpwind的注册用户，无法批量导入到网站；网站的注册用户，也无法批量导入到Discuz或Phpwind。</p>
+    <p>2.通讯成功，Discuz{% if setting('magic.uc_phpwind','0') %}或Phpwind{% endif %}<strong class="user-center-copys-darken">所有注册用户</strong>，用户的用户名（需满足ES注册规则，否则无法同步）、密码、邮箱信息，无论通讯前还是通讯后注册都可以登录并同步到网站。</p>
+    <p>3.通讯成功，只有<strong class="user-center-copys-darken">通讯之后</strong>在ES注册的新用户，<strong class="user-center-copys-darken">才能</strong>登录并同步到Discuz{% if setting('magic.uc_phpwind','0') %}或Phpwind{% endif %}，<strong class="user-center-copys-darken">通讯之前</strong>的注册用户，<strong class="user-center-copys-darken">不能</strong>登录和同步。</p>
+    <p>4.由于<strong class="user-center-copys-darken">密码加密机制</strong>不同，Discuz{% if setting('magic.uc_phpwind','0') %}或Phpwind{% endif %}的注册用户，无法批量导入到网站；网站的注册用户，也无法批量导入到Discuz{% if setting('magic.uc_phpwind','0') %}或Phpwind{% endif %}。</p>
   </div>
 
 
